Changed all image paths for deployment with webpack. Development complete

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <div class="top-nav">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="https://uk.pandora.net/en/" target="_blank">
-                        <img src="/src/assets/images/pandora-logo.png" alt="Pandora Logo" class="pandora-logo">
+                        <img src="images/pandora-logo.png" alt="Pandora Logo" class="pandora-logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,22 +77,21 @@
                 </nav>
             </div>
 
-
             <!-- Hero Image -->
             <section class="hero fast-reveal">
                 <div class="content-wrapper">
-                    <div class="hero-bg-img">
+                    <div class="hero-bg-img" style="background-image: url('images/hero-bg.jpg');">
                         <div class="d-lg-flex justify-content-lg-between flex-lg-row-reverse">
                             <div class="hero-featured-img-block" data-aos="fade-left" data-aos-delay="1000"
                                 data-aos-duration="1500">
-                                <img src="/src/assets/images/hero-featured-img.png"
-                                    alt="Pandora x Disney featured image" class="hero-featured-img img-fluid">
+                                <img src="images/hero-featured-img.png" alt="Pandora x Disney featured image"
+                                    class="hero-featured-img img-fluid">
                             </div>
 
                             <div class="hero-txt-block" data-aos="fade-up" data-aos-delay="500"
                                 data-aos-duration="1000">
                                 <div class="pandora-disney-logo">
-                                    <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                    <img src="images/hero-logo.png" alt="Pandora Disney Collaboration"
                                         class="pandora-disney-logo img-fluid">
                                 </div>
                                 <div class="hero-txt">
@@ -137,12 +136,12 @@
                     <div class="d-lg-flex">
                         <div class="main-featured-img-wrapper" data-aos="fade-up" data-aos-delay="500"
                             data-aos-duration="1000">
-                            <img src="/src/assets/images/main-featured-img.png"
-                                alt="Pandora x Disney main featured image" class="main-featured-img img-fluid">
+                            <img src="images/main-featured-img.png" alt="Pandora x Disney main featured image"
+                                class="main-featured-img img-fluid">
                         </div>
                         <div class="main-txt-block" data-aos="fade-left" data-aos-delay="800" data-aos-duration="1500">
                             <div class="pandora-disney-logo">
-                                <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                <img src="images/hero-logo.png" alt="Pandora Disney Collaboration"
                                     class="pandora-disney-logo">
                             </div>
                             <div class="txt">
@@ -169,13 +168,13 @@
                                 data-aos-duration="1500">
                                 <a href="#">
                                     <div class="card-img">
-                                        <img src="/src/assets/images/card-1.png" alt="Pandora x Disney featured product"
+                                        <img src="images/card-1.png" alt="Pandora x Disney featured product"
                                             class="card-img img-fluid">
                                     </div>
                                     <div class="card-info">
                                         <div class="pandora-disney-logo">
-                                            <img src="/src/assets/images/hero-logo.png"
-                                                alt="Pandora Disney Collaboration" class="pandora-disney-logo">
+                                            <img src="images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                                class="pandora-disney-logo">
                                         </div>
                                         <p class="product-desc">Disney Luminous Ariel Dangle Charm</p>
                                         <span class="price">£60.00</span>
@@ -187,13 +186,13 @@
                                 data-aos-duration="1500">
                                 <a href="#">
                                     <div class="card-img">
-                                        <img src="/src/assets/images/card-2.png" alt="Pandora x Disney featured product"
+                                        <img src="images/card-2.png" alt="Pandora x Disney featured product"
                                             class="card-img img-fluid">
                                     </div>
                                     <div class="card-info">
                                         <div class="pandora-disney-logo">
-                                            <img src="/src/assets/images/hero-logo.png"
-                                                alt="Pandora Disney Collaboration" class="pandora-disney-logo">
+                                            <img src="images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                                class="pandora-disney-logo">
                                         </div>
                                         <p class="product-desc">Disney Ariel Dangle Charm</p>
                                         <span class="price">£55.00</span>
@@ -205,13 +204,13 @@
                                 data-aos-duration="1500">
                                 <a href="#">
                                     <div class="card-img">
-                                        <img src="/src/assets/images/card-3.png" alt="Pandora x Disney featured product"
+                                        <img src="images/card-3.png" alt="Pandora x Disney featured product"
                                             class="card-img img-fluid">
                                     </div>
                                     <div class="card-info">
                                         <div class="pandora-disney-logo">
-                                            <img src="/src/assets/images/hero-logo.png"
-                                                alt="Pandora Disney Collaboration" class="pandora-disney-logo">
+                                            <img src="images/hero-logo.png" alt="Pandora Disney Collaboration"
+                                                class="pandora-disney-logo">
                                         </div>
                                         <p class="product-desc">Disney The Little Mermaid Flounder Charm</p>
                                         <span class="price">£55.00</span>
@@ -240,7 +239,7 @@
                 <div>
                     <div class="footer-logo text-center">
                         <a href="https://uk.pandora.net/en/" target="_blank">
-                            <img src="/src/assets/images/hero-logo.png" alt="Pandora Disney Collaboration"
+                            <img src="images/hero-logo.png" alt="Pandora Disney Collaboration"
                                 class="pandora-disney-logo">
                         </a>
                     </div>
