Added JS for automatic copyright yearly update

--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,10 @@
                         </a>
                     </div>
                     <p class="copyright text-center">
-                        Landing page. &copy;2020 Copyright. Designed & Developed by <a href="http://chantalstlouis.com/"
+                        Landing page. &copy;<script>
+                            document.write(new Date().getFullYear());
+
+                        </script> Copyright. Designed & Developed by <a href="http://chantalstlouis.com/"
                             target="_blank" class="portfolio-link"> Chantal St Louis</a>
                         with love
                     </p>
