Added white space between copyright and year

--- a/src/index.html
+++ b/src/index.html
@@ -247,7 +247,7 @@
                         Landing page. &copy;<script>
                             document.write(new Date().getFullYear());
 
-                        </script> Copyright. Designed & Developed by <a href="http://chantalstlouis.com/"
+                        </script>&nbsp;Copyright. Designed & Developed by <a href="http://chantalstlouis.com/"
                             target="_blank" class="portfolio-link"> Chantal St Louis</a>
                         with love
                     </p>
